--- a/proj_hetimaportmap/web/app.html
+++ b/proj_hetimaportmap/web/app.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
+    <div id="loader">
+    <object type="image/svg+xml" data="gears.svg" width="256" height="256"></object>
+    </div>
     <script src="packages/chrome/bootstrap.js" defer></script>
-
-    <script src="app.dart" type="application/dart"></script>    
+    <script src="app.dart" type="application/dart"></script>
   </body>
 </html>
